# GlobalSearch

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  cross_ide_path_utils.py  docker-compose.yml  pyproject.toml  run-gui
.kiro/specs/intelligent-pdf-search/: agent-implementation-guide.md  cross-ide-path-utils.py  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
config/: settings.json
docs/: GUI_SETUP.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
scripts/: run_gui.sh  smoke_test.py  validate_docker_config.py
src/: cli.py  main.py
src/api/: main.py
src/core/: __init__.py
src/core/config/: __init__.py  config_manager.py
src/core/documents/: __init__.py  base.py  docx.py  manager.py  models.py  pdf.py  text.py  watcher.py
src/core/events/: __init__.py  bus.py  events.py
src/core/exceptions/: __init__.py  exceptions.py
src/core/indexing/: __init__.py  index_manager.py
src/core/models/: __init__.py  configuration.py  document.py  search.py  service.py  topic.py
src/gui/: __init__.py  file_manager_window.py  search_window.py  settings_window.py
tests/: conftest.py
tests/api/: test_api_basic.py
tests/core/: test_configuration_manager.py  test_exceptions.py  test_models.py
tests/gui/: test_error_and_status.py  test_file_manager_window.py  test_indexing_worker.py  test_pdf_viewer.py  test_search_window.py  test_settings_window.py  test_text_viewer.py
tests/integration/: test_compose_optimized.py  test_docker_compose_file.py  test_dockerfile_setup.py
(+38 files in other folders)
