[project]
name = "intelligent-pdf-search"
version = "0.1.0"
description = "Dual-window intelligent document search app (spec scaffolding)"
requires-python = ">=3.11"
dependencies = [
    # Core dependencies
    "pdfplumber>=0.10.0",
    "Pillow>=10.0.0",
    "asyncio-mqtt>=0.13.0",

    # Search & AI
    "elasticsearch>=8.11.0",
    "sentence-transformers>=2.2.2",
    "rapidfuzz>=3.5.0",

    # Data & Infrastructure
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",

    # Performance & processing
    "numba>=0.58.0",
    "cython>=3.0.0",
    "joblib>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pytest-qt>=4.2.0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
